--- a/stock-price-prediction-nlp-model.ipynb
+++ b/stock-price-prediction-nlp-model.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stock Price Prediction Sentiment Analysis Using NLP Model\n",
+    "Developed By Dhanasekar M"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
